--- a/public/monetag_xxxxx.html
+++ b/public/monetag_xxxxx.html
@@ -1,6 +1,6 @@
 self.options = {
-    "domain": "5gvci.com",
-    "zoneId": 10400606
+    "domain": "3nbf4.com",
+    "zoneId": 10400646
 }
 self.lary = ""
-importScripts('https://5gvci.com/act/files/service-worker.min.js?r=sw')
+importScripts('https://3nbf4.com/act/files/service-worker.min.js?r=sw')
