Add Monetag verification file

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+      <meta name="monetag" content="c77ff293de18b6788cfbe59d8190b0c9">
     <title>React App</title>
   </head>
   <body>
