--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>News Portal – ताज़ा हिंदी खबरें</title>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-      <meta name="monetag" content="c77ff293de18b6788cfbe59d8190b0c9">
-    <title>React App</title>
+    <meta name="description" content="ताज़ा, भरोसेमंद और तेज़ हिंदी समाचार – राजनीति, शिक्षा, स्वास्थ्य और हिमाचल की खबरें" />
+
+    <!-- Open Graph (WhatsApp / Facebook) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="News Portal" />
+    <meta property="og:title" content="ताज़ा हिंदी खबरें | News Portal" />
+    <meta property="og:description" content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें" />
+    <meta property="og:url" content="https://news-portal-three-blue.vercel.app" />
+    <meta property="og:image" content="https://news-portal-three-blue.vercel.app/share.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ताज़ा हिंदी खबरें | News Portal" />
+    <meta name="twitter:description" content="हिमाचल समेत देश-दुनिया की बड़ी खबरें" />
+    <meta name="twitter:image" content="https://news-portal-three-blue.vercel.app/share.jpg" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
