Improve social media preview

--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,24 @@
   <head>
     <title>News Portal – ताज़ा हिंदी खबरें</title>
 
-    <meta name="description" content="ताज़ा, भरोसेमंद और तेज़ हिंदी समाचार – राजनीति, शिक्षा, स्वास्थ्य और हिमाचल की खबरें" />
+    <!-- BASIC SEO -->
+      <title>ताज़ा हिंदी खबरें | News Portal</title>
+      <meta name="description" content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें" />
 
-    <!-- Open Graph (WhatsApp / Facebook) -->
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="News Portal" />
-    <meta property="og:title" content="ताज़ा हिंदी खबरें | News Portal" />
-    <meta property="og:description" content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें" />
-    <meta property="og:url" content="https://news-portal-three-blue.vercel.app" />
-    <meta property="og:image" content="https://news-portal-three-blue.vercel.app/share.jpg" />
+      <!-- Open Graph (WhatsApp / Facebook) -->
+      <meta property="og:type" content="website" />
+      <meta property="og:title" content="ताज़ा हिंदी खबरें | News Portal" />
+      <meta property="og:description" content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें" />
+      <meta property="og:image" content="https://news-portal-three-blue.vercel.app/share.jpg" />
+      <meta property="og:url" content="https://news-portal-three-blue.vercel.app" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ताज़ा हिंदी खबरें | News Portal" />
-    <meta name="twitter:description" content="हिमाचल समेत देश-दुनिया की बड़ी खबरें" />
-    <meta name="twitter:image" content="https://news-portal-three-blue.vercel.app/share.jpg" />
+      <!-- Twitter -->
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:title" content="ताज़ा हिंदी खबरें | News Portal" />
+      <meta name="twitter:description" content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें" />
+      <meta name="twitter:image" content="https://news-portal-three-blue.vercel.app/share.jpg" />
+
+
 
   </head>
   <body>
