Added website favicon

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
       <meta name="twitter:title" content="ताज़ा हिंदी खबरें | News Portal" />
       <meta name="twitter:description" content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें" />
       <meta name="twitter:image" content="https://news-portal-three-blue.vercel.app/share.jpg" />
+      <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
 
 
 
