edit index html

--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>News Portal – ताज़ा हिंदी खबरें</title>
+    <meta charset="utf-8" />
+
+    <!-- ✅ REQUIRED FOR MOBILE -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>ताज़ा हिंदी खबरें | News Portal</title>
 
     <!-- BASIC SEO -->
-      <title>ताज़ा हिंदी खबरें | News Portal</title>
-      <meta name="description" content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें" />
+    <meta
+      name="description"
+      content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें"
+    />
 
-      <!-- Open Graph (WhatsApp / Facebook) -->
-      <meta property="og:type" content="website" />
-      <meta property="og:title" content="ताज़ा हिंदी खबरें | News Portal" />
-      <meta property="og:description" content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें" />
-      <meta property="og:image" content="https://news-portal-three-blue.vercel.app/share.jpg" />
-      <meta property="og:url" content="https://news-portal-three-blue.vercel.app" />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="ताज़ा हिंदी खबरें | News Portal" />
+    <meta
+      property="og:description"
+      content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें"
+    />
+    <meta
+      property="og:image"
+      content="https://news-portal-three-blue.vercel.app/share.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://news-portal-three-blue.vercel.app"
+    />
 
-      <!-- Twitter -->
-      <meta name="twitter:card" content="summary_large_image" />
-      <meta name="twitter:title" content="ताज़ा हिंदी खबरें | News Portal" />
-      <meta name="twitter:description" content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें" />
-      <meta name="twitter:image" content="https://news-portal-three-blue.vercel.app/share.jpg" />
-      <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ताज़ा हिंदी खबरें | News Portal" />
+    <meta
+      name="twitter:description"
+      content="हिमाचल समेत देश-दुनिया की बड़ी खबरें पढ़ें"
+    />
+    <meta
+      name="twitter:image"
+      content="https://news-portal-three-blue.vercel.app/share.jpg"
+    />
 
-
-
-
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
