--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>ताज़ा हिंदी खबरें | News Portal</title>
-
+    
     <!-- BASIC SEO -->
     <meta
       name="description"
@@ -43,6 +43,16 @@
     />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+     <!-- In-Page Push Ad Code -->
+    <script>
+    (function(s){
+      s.dataset.zone='10579076',
+      s.src='https://nap5k.com/tag.min.js'
+    })([document.documentElement, document.body]
+      .filter(Boolean)
+      .pop()
+      .appendChild(document.createElement('script')))
+    </script>
   </head>
 
   <body>
