--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-
+    
     <!-- ✅ REQUIRED FOR MOBILE -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -43,7 +42,7 @@
     />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-     <!-- In-Page Push Ad Code -->
+       <!--In-Page Push Ad Code -->
     <script>
     (function(s){
       s.dataset.zone='10579076',
@@ -52,7 +51,11 @@
       .filter(Boolean)
       .pop()
       .appendChild(document.createElement('script')))
-    </script>
+      </script>
+
+      <!--multi tag link -->
+      <!--<script src="https://quge5.com/88/tag.min.js" data-zone="208404" async data-cfasync="false"></script>-->
+      
   </head>
 
   <body>
